cursive-bootstrap/tests/ui/E-CON/E-CON-0281.cursive
// RUN: compile-fail
// DIAG: E-CON-0281
// SPEC: 8.9
// DESC: Async operation escapes its region

procedure make() -> Future<i32> {
    return 1
}

procedure escape_async() -> i32 {
    var f: Future<i32> = make()
    region {
        f = make()  //~ ERROR E-CON-0281
    }
    return 0
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}

